--- a/css/styles.css
+++ b/css/styles.css
@@ -2,26 +2,43 @@
   box-sizing: border-box;
 }
 
+
+body{
+  background-color: black;
+  margin: top 50%;;
+}
+
 .box {
   position: relative;
   width: 150px;
   height: 150px;
-  background-color: rgb(160, 160, 0);
-  border-radius: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: red;
+  box-shadow: -250px 200px green, 250px 400px blue;
 }
 
-.box {
-    position: 
-    width: 150px;
-    height: 150px;
-    background-color: rgb(160, 160, 0);
-    border-radius: 100px;
-  }
+.box::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -250px;
+  width: 150px;
+  height: 150px;
+  background-color: yellow;
+  border-radius: 50%;
+  box-shadow: 250px 400px aqua, 500px 200px purple;
+}
 
-.box-relative {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    background-color: rgb(160, 160, 0);
-    border-radius: 100px;
-  }
+.box::before {
+  content: '';
+  position: absolute;
+  top: 200px;
+  left: 0;
+  width: 150px;
+  height: 150px;
+  background-color: yellowgreen;
+  border-radius: 30%;
+  box-shadow: 250px -200px cornflowerblue, -250px 200px plum;
+}
+
